# llm-gateway

./: README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  main.py
app/api/: deps.py
app/api/routes/: completions.py  health.py
app/gateway/: dispatcher.py  router.py
app/providers/: anthropic.py  base.py  gemini.py  ollama.py
app/schemas/: request.py  response.py
tests/: test_providers.py  test_routing.py
